--- a/Project.BLL/Project.BLL.csproj
+++ b/Project.BLL/Project.BLL.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Project.DAL\Project.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ServiceInjection\" />
+  </ItemGroup>
+
 </Project>
